again scrollbar error fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,10 +27,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
 .btn {
   /* padding: 0.1em 0.25em; */
   width: 4em;
@@ -195,20 +191,6 @@ body::-webkit-scrollbar {
     overflow-x: scroll; /* Force horizontal scroll on smaller screens */
   }
 
-  .timeline-card-container-wrapper::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  .timeline-card-container-wrapper::-webkit-scrollbar-track {
-    background-color: #2b2b2b;
-    border-radius: 50px;
-  }
-  
-  .timeline-card-container-wrapper::-webkit-scrollbar-thumb {
-    background-color: #aed6f1;
-    border-radius: 50px;
-  }
-  
   .timeline-card {
     flex: 0 0 calc(100% - 2rem);
     margin-right: 1rem;
